apps/academy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: academy-web
  namespace: academy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: academy-web
  template:
    metadata:
      labels:
        app: academy-web
    spec:
      serviceAccountName: academy-app
      containers:
        - name: web
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2
          args:
            - "--port=5432"
            - "ls-platform-gitops:us-east1:academy-postgres"
          securityContext:
            runAsNonRoot: true
