apps/academy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: academy-web
  namespace: academy
spec:
  selector:
    app: academy-web
  ports:
    - port: 80
      targetPort: 80
